--- a/pythonmysql.ipynb
+++ b/pythonmysql.ipynb
@@ -44,12 +44,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#creating a cursor to the db\n"
+    "#creating a cursor to the db\n",
+    "c = db.cursor()\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
