Executing SQL statements using c.execute()

--- a/pythonmysql.ipynb
+++ b/pythonmysql.ipynb
@@ -54,6 +54,49 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Executing SQL statements using the cursor\n",
+    "c.execute(\"CREATE DATABASE pythonSQL\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#SQL statement to show databases\n",
+    "c.execute(\"SHOW DATABASES\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('information_schema',)\n",
+      "('mysql',)\n",
+      "('performance_schema',)\n",
+      "('pythonsql',)\n",
+      "('sys',)\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Printing the databases\n",
+    "for  database in c:\n",
+    "    print(database)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
