Using the database

--- a/pythonmysql.ipynb
+++ b/pythonmysql.ipynb
@@ -97,6 +97,16 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#using the database created earlier\n",
+    "c.execute(\"USE pythonSQL\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
