SQL Creation of tables

--- a/pythonmysql.ipynb
+++ b/pythonmysql.ipynb
@@ -107,10 +107,32 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#creating a table - Persons\n",
+    "c.execute( \"CREATE TABLE Persons (PersonID int,LastName varchar(255),FirstName varchar(255),Address varchar(255),City varchar(255))\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Creating Employees table\n",
+    "c.execute(\"CREATE TABLE employees (id INT AUTO_INCREMENT PRIMARY KEY, EmployeeNo Varchar(255), FirstName Varchar(255), LastName Varchar(255), Age INT, Role Varchar(50))\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#Altering employees table by adding a column"
+   ]
   }
  ],
  "metadata": {
