--- a/pythonmysql.ipynb
+++ b/pythonmysql.ipynb
@@ -127,12 +127,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Altering employees table by adding a column"
+    "#Altering employees table by adding a column\n",
+    "c.execute(\"ALTER TABLE employees ADD Column Phone varChar(255)\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
