--- a/pythonmysql.ipynb
+++ b/pythonmysql.ipynb
@@ -137,6 +137,36 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Creating departments table \n",
+    "c.execute(\"CREATE TABLE Departments (id INT AUTO_INCREMENT PRIMARY KEY, name varChar(255), Head INT, FOREIGN KEY (Head) REFERENCES employees(id))\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "c.execute(\"ALTER TABLE employees ADD COLUMN DepartmentID INT\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Adding foreign key to employees table\n",
+    "c.execute(\"ALTER TABLE employees ADD FOREIGN KEY (DepartmentID) REFERENCES departments(id)\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
