--- a/pythonmysql.ipynb
+++ b/pythonmysql.ipynb
@@ -170,7 +170,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "c.execute(\"SELECT * FROM employees\")"
+   ]
   }
  ],
  "metadata": {
