Committing changes to the db(writing to it)

--- a/pythonmysql.ipynb
+++ b/pythonmysql.ipynb
@@ -186,17 +186,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3  rows affected\n"
+     ]
+    }
+   ],
    "source": [
     "#Inserting values into a table\n",
-    "c.execute(\"INSERT INTO Departments (name) VALUES ('Human Resources'), ('Engineering'), ('Marketing')\")"
+    "c.execute(\"INSERT INTO Departments (name) VALUES ('Human Resources'), ('Engineering'), ('Marketing')\")\n",
+    "#Committing changes to the db\n",
+    "db.commit()\n",
+    "#Print rows affected\n",
+    "print(c.rowcount,\" rows affected\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -205,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -214,11 +226,63 @@
      "text": [
       "(1, 'Human Resources', None)\n",
       "(2, 'Engineering', None)\n",
-      "(3, 'Marketing', None)\n"
+      "(3, 'Marketing', None)\n",
+      "(4, 'Human Resources', None)\n",
+      "(5, 'Engineering', None)\n",
+      "(6, 'Marketing', None)\n"
      ]
     }
    ],
    "source": [
+    "for row in c:\n",
+    "    print(row)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Insertion into employees table in bulk\n",
+    "sql = \"INSERT INTO employees (EmployeeNo, FirstName, LastName, DepartmentID, Age ,Phone) VALUES (%s,%s,%s,%s,%s,%s)\"\n",
+    "val = ('2005','Brigit','Chelangat',3,3,'6235472713676')\n",
+    "c.execute(sql,val)\n",
+    "db.commit()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 rows affected\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(c.rowcount,\"rows affected\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1, '2005', 'Brigit', 'Chelangat', 3, None, '6235472713676', 3)\n"
+     ]
+    }
+   ],
+   "source": [
+    "c.execute(\"SELECT * FROM employees\")\n",
     "for row in c:\n",
     "    print(row)"
    ]
