Bulk insertion using executemany()

--- a/pythonmysql.ipynb
+++ b/pythonmysql.ipynb
@@ -270,14 +270,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(1, '2005', 'Brigit', 'Chelangat', 3, None, '6235472713676', 3)\n"
+      "(1, '2005', 'Brigit', 'Chelangat', 3, None, '6235472713676', 3)\n",
+      "(2, '2005', 'Oak', 'Tree', 4, None, '6235472713676', 3)\n",
+      "(3, '2005', 'Brian', 'Kiprono', 18, None, '6235472713676', 2)\n",
+      "(4, '2005', 'Evans', 'Ruto', 13, None, '6235472713676', 1)\n",
+      "(5, '2005', 'Kiptoo', 'Kemboi', 5, None, '6235472713676', 3)\n",
+      "(6, '2005', 'John', 'Doe', 6, None, '6235472713676', 3)\n",
+      "(7, '2005', 'Adam', 'Too', 16, None, '6235472713676', 2)\n",
+      "(8, '2005', 'Brigit', 'Eve', 23, None, '6235472713676', 2)\n",
+      "(9, '2005', 'Xanto', 'Chelangat', 30, None, '6235472713676', 2)\n"
      ]
     }
    ],
@@ -289,10 +297,52 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "8 rows affected\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Bulk insertion\n",
+    "sql = \"INSERT INTO employees (EmployeeNo, FirstName, LastName, DepartmentID, Age ,Phone) VALUES (%s,%s,%s,%s,%s,%s)\"\n",
+    "#Values are in a tuple\n",
+    "vals = [\n",
+    "    ('2005','Oak','Tree',3,4,'6235472713676'),\n",
+    "    ('2005','Brian','Kiprono',2,18,'6235472713676'),\n",
+    "    ('2005','Evans','Ruto',1,13,'6235472713676'),\n",
+    "    ('2005','Kiptoo','Kemboi',3,5,'6235472713676'),\n",
+    "    ('2005','John','Doe',3,6,'6235472713676'),\n",
+    "    ('2005','Adam','Too',2,16,'6235472713676'),\n",
+    "    ('2005','Brigit','Eve',2,23,'6235472713676'),\n",
+    "    ('2005','Xanto','Chelangat',2,30,'6235472713676')\n",
+    "    ]\n",
+    "#executemany function\n",
+    "c.executemany(sql,vals)\n",
+    "db.commit()\n",
+    "print(c.rowcount,\"rows affected\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "q = \"SELECT * FROM employees\"\n",
+    "c.execute(q)\n",
+    "\n",
+    "#Fetch Values\n",
+    "result = c.fetchall()\n",
+    "#Print the values\n",
+    "for row in result:\n",
+    "    print(row)"
+   ]
   }
  ],
  "metadata": {
