--- a/pythonmysql.ipynb
+++ b/pythonmysql.ipynb
@@ -330,9 +330,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1, '2005', 'Brigit', 'Chelangat', 3, None, '6235472713676', 3)\n",
+      "(2, '2005', 'Oak', 'Tree', 4, None, '6235472713676', 3)\n",
+      "(3, '2005', 'Brian', 'Kiprono', 18, None, '6235472713676', 2)\n",
+      "(4, '2005', 'Evans', 'Ruto', 13, None, '6235472713676', 1)\n",
+      "(5, '2005', 'Kiptoo', 'Kemboi', 5, None, '6235472713676', 3)\n",
+      "(6, '2005', 'John', 'Doe', 6, None, '6235472713676', 3)\n",
+      "(7, '2005', 'Adam', 'Too', 16, None, '6235472713676', 2)\n",
+      "(8, '2005', 'Brigit', 'Eve', 23, None, '6235472713676', 2)\n",
+      "(9, '2005', 'Xanto', 'Chelangat', 30, None, '6235472713676', 2)\n"
+     ]
+    }
+   ],
    "source": [
     "q = \"SELECT * FROM employees\"\n",
     "c.execute(q)\n",
@@ -343,6 +359,13 @@
     "for row in result:\n",
     "    print(row)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
