WHERE and ORDER BY

--- a/pythonmysql.ipynb
+++ b/pythonmysql.ipynb
@@ -362,6 +362,68 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('Brigit', 'Chelangat', 3)\n",
+      "('Oak', 'Tree', 4)\n",
+      "('Brian', 'Kiprono', 18)\n",
+      "('Evans', 'Ruto', 13)\n",
+      "('Kiptoo', 'Kemboi', 5)\n",
+      "('John', 'Doe', 6)\n",
+      "('Adam', 'Too', 16)\n",
+      "('Brigit', 'Eve', 23)\n",
+      "('Xanto', 'Chelangat', 30)\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Selecting specific columns from a table\n",
+    "q = \"SELECT FirstName,LastName,Age FROM employees\"\n",
+    "c.execute(q)\n",
+    "\n",
+    "#Fetch Values\n",
+    "result = c.fetchall()\n",
+    "#Print the values\n",
+    "for row in result:\n",
+    "    print(row)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('Adam', 'Too', 16)\n",
+      "('Brian', 'Kiprono', 18)\n",
+      "('Brigit', 'Eve', 23)\n",
+      "('Xanto', 'Chelangat', 30)\n"
+     ]
+    }
+   ],
+   "source": [
+    "#SELECT WHERE, ORDER BY AND LIMIT\n",
+    "#ORDER BY default in Ascending but you can specify DESC if you want Descending order\n",
+    "q = \"SELECT FirstName,LastName,Age FROM employees WHERE Age >14 ORDER BY FirstName\"\n",
+    "c.execute(q)\n",
+    "\n",
+    "#Fetch Values\n",
+    "result = c.fetchall()\n",
+    "#Print the values\n",
+    "for row in result:\n",
+    "    print(row)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
