--- a/pythonmysql.ipynb
+++ b/pythonmysql.ipynb
@@ -395,7 +395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -403,16 +403,15 @@
      "output_type": "stream",
      "text": [
       "('Adam', 'Too', 16)\n",
-      "('Brian', 'Kiprono', 18)\n",
-      "('Brigit', 'Eve', 23)\n",
-      "('Xanto', 'Chelangat', 30)\n"
+      "('Brian', 'Kiprono', 18)\n"
      ]
     }
    ],
    "source": [
     "#SELECT WHERE, ORDER BY AND LIMIT\n",
     "#ORDER BY default in Ascending but you can specify DESC if you want Descending order\n",
-    "q = \"SELECT FirstName,LastName,Age FROM employees WHERE Age >14 ORDER BY FirstName\"\n",
+    "#LIMITR is the last clause to be executed\n",
+    "q = \"SELECT FirstName,LastName,Age FROM employees WHERE Age >14 ORDER BY FirstName DESC LIMIT 2\"\n",
     "c.execute(q)\n",
     "\n",
     "#Fetch Values\n",
