--- a/pythonmysql.ipynb
+++ b/pythonmysql.ipynb
@@ -362,15 +362,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "('Brigit', 'Chelangat', 3)\n",
-      "('Oak', 'Tree', 4)\n",
       "('Brian', 'Kiprono', 18)\n",
       "('Evans', 'Ruto', 13)\n",
       "('Kiptoo', 'Kemboi', 5)\n",
@@ -419,6 +417,27 @@
     "#Print the values\n",
     "for row in result:\n",
     "    print(row)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2 rows affected\n"
+     ]
+    }
+   ],
+   "source": [
+    "#SQL CRUD - Deletion \n",
+    "q = \"DELETE FROM employees WHERE Age <5\"\n",
+    "c.execute(q)\n",
+    "\n",
+    "print(c.rowcount,\"rows affected\")"
    ]
   },
   {
