--- a/pythonmysql.ipynb
+++ b/pythonmysql.ipynb
@@ -362,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -371,7 +371,7 @@
      "text": [
       "('Brian', 'Kiprono', 18)\n",
       "('Evans', 'Ruto', 13)\n",
-      "('Kiptoo', 'Kemboi', 5)\n",
+      "('Kiptoo', 'Kemboi', 20)\n",
       "('John', 'Doe', 6)\n",
       "('Adam', 'Too', 16)\n",
       "('Brigit', 'Eve', 23)\n",
@@ -442,10 +442,33 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 rows affected\n"
+     ]
+    }
+   ],
+   "source": [
+    "#SQL CRUD - Updation \n",
+    "q = \"UPDATE employees SET Age = 20 WHERE Age = 5\"\n",
+    "c.execute(q)\n",
+    "\n",
+    "print(c.rowcount,\"rows affected\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#JOINS - INNER JOIN "
+   ]
   }
  ],
  "metadata": {
