--- a/pythonmysql.ipynb
+++ b/pythonmysql.ipynb
@@ -407,7 +407,7 @@
    ],
    "source": [
     "#SELECT WHERE, ORDER BY AND LIMIT\n",
-    "#ORDER BY default in Ascending but you can specify DESC if you want Descending order\n",
+    "#ORDER BY default in Ascending but you can specify DESC if you want Descending order or ASC\n",
     "#LIMITR is the last clause to be executed\n",
     "q = \"SELECT FirstName,LastName,Age FROM employees WHERE Age >14 ORDER BY FirstName DESC LIMIT 2\"\n",
     "c.execute(q)\n",
@@ -463,11 +463,50 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('Adam', 'Engineering')\n",
+      "('Brian', 'Engineering')\n",
+      "('Brigit', 'Engineering')\n",
+      "('Evans', 'Human Resources')\n",
+      "('John', 'Marketing')\n",
+      "('Kiptoo', 'Marketing')\n",
+      "('Xanto', 'Engineering')\n"
+     ]
+    }
+   ],
+   "source": [
+    "#JOINS - INNER JOIN \n",
+    "q = \"SELECT employees.FirstName, departments.name FROM employees INNER JOIN departments ON employees.DepartmentID = Departments.id ORDER BY FirstName ASC\"\n",
+    "c.execute(q)\n",
+    "\n",
+    "#Fetch Values\n",
+    "result = c.fetchall()\n",
+    "#Print the values\n",
+    "for row in result:\n",
+    "    print(row)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#JOINS - INNER JOIN "
+    "#JOINS - INNER JOIN \n",
+    "q = \"SELECT employees.FirstName, departments.name FROM employees INNER JOIN departments ON employees.DepartmentID = Departments.id ORDER BY FirstName ASC\"\n",
+    "c.execute(q)\n",
+    "\n",
+    "#Fetch Values\n",
+    "result = c.fetchall()\n",
+    "#Print the values\n",
+    "for row in result:\n",
+    "    print(row)"
    ]
   }
  ],
