--- a/pythonmysql.ipynb
+++ b/pythonmysql.ipynb
@@ -494,12 +494,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('Adam', 'Engineering')\n",
+      "('Brian', 'Engineering')\n",
+      "('Brigit', 'Engineering')\n",
+      "('Evans', 'Human Resources')\n",
+      "('John', 'Marketing')\n",
+      "('Kiptoo', 'Marketing')\n",
+      "('Xanto', 'Engineering')\n"
+     ]
+    }
+   ],
    "source": [
-    "#JOINS - INNER JOIN \n",
-    "q = \"SELECT employees.FirstName, departments.name FROM employees INNER JOIN departments ON employees.DepartmentID = Departments.id ORDER BY FirstName ASC\"\n",
+    "#JOINS - LEFT JOIN \n",
+    "q = \"SELECT employees.FirstName, departments.name FROM employees LEFT JOIN departments ON employees.DepartmentID = Departments.id ORDER BY FirstName ASC\"\n",
     "c.execute(q)\n",
     "\n",
     "#Fetch Values\n",
@@ -508,6 +522,13 @@
     "for row in result:\n",
     "    print(row)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
